website/versioned_docs/version-2.0.0-alpha.11/react-native.md
---
id: version-2.0.0-alpha.11-react-native
title: react-native package
hide_title: true
original_id: react-native
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## react-native package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./react-native.authcontainer.md) |  |
|  [BaseAPIClient](./react-native.baseapiclient.md) |  |
|  [Container](./react-native.container.md) |  |
|  [GlobalJSONContainerStorage](./react-native.globaljsoncontainerstorage.md) |  |
|  [ReactNativeAPIClient](./react-native.reactnativeapiclient.md) |  |
|  [ReactNativeAsyncStorageStorageDriver](./react-native.reactnativeasyncstoragestoragedriver.md) |  |
|  [ReactNativeContainer](./react-native.reactnativecontainer.md) |  |
|  [SkygearError](./react-native.skygearerror.md) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [decodeAuthResponse(r)](./react-native.decodeauthresponse.md) |  |
|  [decodeError(err)](./react-native.decodeerror.md) |  |
|  [decodeIdentity(i)](./react-native.decodeidentity.md) |  |
|  [decodeSession(s)](./react-native.decodesession.md) |  |
|  [decodeUser(u)](./react-native.decodeuser.md) |  |
|  [encodeIdentity(i)](./react-native.encodeidentity.md) |  |
|  [encodeQuery(query)](./react-native.encodequery.md) |  |
|  [encodeQueryComponent(s)](./react-native.encodequerycomponent.md) |  |
|  [encodeUser(u)](./react-native.encodeuser.md) |  |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AuthResponse](./react-native.authresponse.md) |  |
|  [ContainerOptions](./react-native.containeroptions.md) |  |
|  [ContainerStorage](./react-native.containerstorage.md) |  |
|  [CustomTokenIdentity](./react-native.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./react-native.extrasessioninfooptions.md) |  |
|  [ExtraSessionInfoProvider](./react-native.extrasessioninfoprovider.md) |  |
|  [JSONArray](./react-native.jsonarray.md) |  |
|  [JSONObject](./react-native.jsonobject.md) |  |
|  [OAuthIdentity](./react-native.oauthidentity.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./react-native.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./react-native.oauthwebredirectauthorizationurloptions.md) |  |
|  [PasswordIdentity](./react-native.passwordidentity.md) |  |
|  [Session](./react-native.session.md) |  |
|  [SessionUserAgent](./react-native.sessionuseragent.md) |  |
|  [SSOLoginOptions](./react-native.ssologinoptions.md) |  |
|  [StorageDriver](./react-native.storagedriver.md) |  |
|  [User](./react-native.user.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [defaultContainer](./react-native.defaultcontainer.md) |  |
|  [VERSION](./react-native.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [Identity](./react-native.identity.md) |  |
|  [JSONValue](./react-native.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./react-native.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./react-native.skygearerrorname.md) |  |

